Add homepage to package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adamsjr8576.github.io/swapi-trivia",
+  "homepage": "https://swapi-directory-b37762.netlify.com/",
   "name": "swapi-trivia",
   "version": "0.1.0",
   "private": true,
